# OpenGLDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dianping/opengldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: opengl.cpp
app/src/main/java/com/dianping/opengldemo/: MainActivity.java  OpenGLJni.java  OpenGLRender.java  OpenGlSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/dianping/opengldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
